--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.4",
     "sass": "^1.32.8",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
